Fix SSH error handling in /healthz endpoint and add virtual environment support
- Enhanced error handling in /healthz endpoint to gracefully handle all SSH-related failures:
  * FileNotFoundError for missing SSH keys
  * PermissionError for SSH key permission issues
  * paramiko.AuthenticationException for auth failures
  * paramiko.SSHException for general SSH errors
  * HTTPException and general Exception cases
- Endpoint now returns detailed error messages instead of crashing
- Successfully tested with real servers showing hostname and uptime data
- Updated .gitignore to exclude virtual environments and activation scripts
- Created unique virtual environment: vpsmanager_venv_2025
- Added comprehensive virtual environment exclusions to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,19 @@
 __pycache__/
 *.py[cod]
 
+# Virtual environments
+venv/
+env/
+.venv/
+.env/
+vpsmanager_venv_2025/
+ENV/
+env.bak/
+venv.bak/
+
+# Virtual environment activation scripts
+activate_venv.sh
+
 # SSH keys or sensitive dirs
 .ssh/
 
