--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,6 @@ alembic
 httpx
 pytest
 pytest-asyncio
+pydantic>=2.8
+SQLAlchemy>=2.0,<3.0
+psycopg2-binary>=2.9        # only if you deploy on Postgres
